--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <ion-app>
-    <ion-menu side="start">
+    <ion-menu side="start" content-id="main">
       <ion-header>
         <ion-toolbar translucent>
           <ion-title>Menu</ion-title>
@@ -56,7 +56,7 @@
         </ion-list>
       </ion-content>
     </ion-menu>
-    <div class="ion-page" main>
+    <div class="ion-page" id="main">
       <ion-header>
         <ion-toolbar color="dark">
           <ion-buttons slot="start">
