--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PWA Toolkit</title>
+  <title>Stuman Student Manager</title>
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
@@ -29,7 +29,7 @@
 
 <body>
   <ion-app>
-    <ion-menu side="start" content-id="main">
+    <ion-menu id="main-menu" side="start" content-id="main">
       <ion-header>
         <ion-toolbar translucent>
           <ion-title>Menu</ion-title>
@@ -37,19 +37,19 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-item href="/">
+          <ion-item href="/" onclick="menuClose()">
             <ion-icon name="home" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
-          <ion-item href="/students">
+          <ion-item href="/students" onclick="menuClose()">
             <ion-icon name="person" slot="start"></ion-icon>
             <ion-label>Students</ion-label>
           </ion-item>
-          <ion-item>
+          <ion-item onclick="menuClose()">
             <ion-icon name="chatbubbles" slot="start"></ion-icon>
             <ion-label>Messages</ion-label>
           </ion-item>
-          <ion-item>
+          <ion-item onclick="menuClose()">
             <ion-icon name="settings" slot="start"></ion-icon>
             <ion-label>Settings</ion-label>
           </ion-item>
@@ -70,6 +70,13 @@
       </ion-content>
     </div>
   </ion-app>
+  <ion-menu-controller></ion-menu-controller>
+  <script>
+    function menuClose() {
+      document.querySelector('ion-menu-controller')
+        .close();
+    }
+  </script>
 </body>
 
 </html>
